package com.atguigu.uml.association;

/**
 * @author : zhanghj
 */
public class IDCard {
    private Person person;
}
