package com.atguigu.uml.association;

/**
 * @author : zhanghj
 */
public class Person {
    private IDCard card;
}
